@@ -1,12 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.44 2005/01/16 07:15:25 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.45 2005/01/16 10:58:00 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   16 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   RunInstall.py called poll_notifications() in gtk idle loop and progress
-  bar/status display work
+  bar/status display work. Take ~5 fscking hours to figure out that pygtk
+  is fscking retarted and locks its thread so python won't switch to
+  another thread :(
 
   15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   USE flag editor in MakeDotConf.py. Fix double spacing issue for USE flags.
